# dosei

./: .dockerignore  .env  .env.example  .env.hobby  .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.toml  docker-compose.hobby.x86.yaml  docker-compose.hobby.yaml  docker-compose.hobby.yml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  dosei_config.py  entrypoint.sh  install.sh  rustfmt.toml  toolchain.toml
cli/: Cargo.toml  README.md
cli/src/: cluster.rs  config.rs  main.rs
cli/src/command/: deploy.rs  env.rs  export.rs  info.rs  login.rs  logout.rs  mod.rs  new.rs  run.rs  service.rs  session.rs  whoami.rs
cli/src/command/env/: mod.rs  set.rs  unset.rs
cli/src/config/: default.rs  mod.rs
dctl/: Cargo.toml  README.md
dctl/src/: config.rs  git.rs  main.rs  session.rs  util.rs
dctl/src/command/: certificate.rs  create.rs  deploy.rs  dev.rs  env.rs  export.rs  login.rs  logout.rs  mod.rs  new.rs  run.rs  session.rs  token.rs  up.rs
dosei/: Cargo.toml
dosei/.sqlx/: query-581c2c3b44b516efd800e40ffeb6266178f61808c8dfee23c5ead40cbc1149e2.json  query-8caa8f3290b9b4eab55b367c9998d1a29049ddf059e9e10b595985495512c1c6.json
dosei/src/: client.rs  config.rs  main.rs  schema.rs  server.rs
dosei/src/server/: cluster.rs  cron.rs  secret.rs
doseid/: Cargo.toml  README.md
doseid/.sqlx/: query-0b9b0a1aeb809cd22809606a66ce8a393c900bea8880a6d63e019912ff29921f.json  query-0bc0bfbb82140ac6c893fca75beb953a81cebef76ba74e96de79a1338310225e.json  query-1145d26ab1ae80259fcab5e374e0ab4291e0b2d8ba40740e21a45ca2975545fa.json  query-17cafbf04aca61c82cfb942b12a78f3c6765b7100eb980300823d277afc1f4dc.json  query-20c2aa07367e06cfa4a4df86f982b44aa852f41995271b6d885827944ffc7f55.json  query-247d72c6fce2fd607038b1bd0def5d75b2fd6d521c725233a31fe6be45a438b6.json  query-30a683e7fceaa4f551c26a60b89cc1be1a22e34f6bcfbc1aaba9f4774b8eb64f.json  query-3b16a6c9d5217682e7f58e5fd803eb9a8a3b14e1b0c09030f4877cde4e0520ec.json  query-3fed14eb0ac6823f5f03990b6440c823522d4c7b5e11fe0f212829b61b894bbb.json  query-44bb8ce554822a0caa3861ccf3dd9a4cc48dbb25d56c947a4ca2103d381e7035.json  query-4b5931053b8a07b0c507196fbe3472a05ff5e639410a44de3383164354cd2d83.json  query-4da9210020405f51e5a494bd5b2ff641afd2b508142a00ccf90c3bb3eaa4665b.json  query-4fdef9e8f4fcd0ebcabbad226255332640bc0e5bcade3e8126a15d18f4a5cd5e.json  query-5238afda216d1b91498a64092717053ac3953d5544b9baf0e2a163bba639a44b.json  query-58b4bfc57a84151de72f61e1c3352582a7baa366b38a33d32395df646a0ae490.json  query-66988250924f6c23d7e2ee3f2e5834281b0251d20f50db8db3acd933dc0ff351.json  query-689876b793c8a45f0ac737647fb90dec4d6f8cd76879b8782915639271397e89.json  query-69f106e5ed65f632b5bdaa3e3ffb306d5e82ce1befcac813057cbe05e9422a0a.json  query-6a74e5fbbc6f68568fa55fe7efc75c6f0c12bbf92c1d0b5f89d73714745bd69d.json  query-734f0cc07beba5beeba65419bd90f1ed3c2b78abfa1e4996d0a631d7e81da27c.json  query-76808f517edae98dbf95665f1f1d9e54a0e0da6559bfcdae49348b19e551b000.json  query-7fadc5392569c42d56abae527d2b605bd5ef8fdb6b099cccf95e29da0169efed.json  query-884cdb366f2f3123fd39f0ef27ad9987232ebc52b7e3e014c4b662dfc6601aee.json  query-8caa8f3290b9b4eab55b367c9998d1a29049ddf059e9e10b595985495512c1c6.json  query-9ba30b8e74e13f0e0dbccadc5394a422210a91a7674ceab18be81eb9991e14e3.json  query-a559d6b971282135bf3baafe5d403b1c7c00a26a229ed2f99bd937b3ad02f51f.json  query-ab2309dc1420e9c80b1dd9c2f244ddd22f0517f65da06b6ef272d1b21f6a57f5.json  query-ac29d14e2b0d6dfd71d05e49c649f971a380624bf37c84b95f69d7954c34faea.json  query-ae6b04b7c1e0e6d7be42d17630af013e127c38a028f17f4d79bdd76c3bf19ccb.json  query-af1fd7dfbdc4113c16ed5b3a42055d5f6e299069fdf0a1da7c657d0092741659.json  query-bae99d3e6dc4d4181565822e7e9b7ccedd4a0283f455e6a1421d197c41da32af.json  query-c06cf6783379e7c0acb8698fad07645607ac3b53382a3f69a1997bdd63838b10.json  query-c596135ad67c21eb2cd644748b30ecc5302459241a1a154517cf5ddfd0634450.json  query-c714494aba0e7c1feba52944b317d9e1ff992d0d401d763c7b4ac8455ea32c65.json  query-c9c11e902905cd163c28f4e6e151552a23ebd49ec15a88fb741289491fe26dfa.json  query-cc13749e05e61f3182c1c978dd96cd7eee6d4591542b5c58bff51c31cea6faa6.json  query-d64cf5ca0509c6b427f79e616964f145d120955cbfcfecf9cdf8469828b4dcbb.json  query-d92a2cf5600788eda77f8425fa92207dba70d10f83009fe1d493cd4b21ef2dc1.json  query-dc556108af00b8061bd412ca2fd974e5c20445d56a5fac99f9bb6b39df977935.json  query-dd667561aed6771e18e0ec47305a0c1c1e923ebba7896595c04961f0e49c3ac2.json  (+6 more)
doseid/migrations/: 0001_init.sql  0002_domains.sql  0002_projects.sql  20240414162551_init.sql
doseid/resources/: doseid.toml  pg_hba.conf
doseid/src/: config.rs  deployment.rs  docker.rs  git.rs  github.rs  main.rs  schema.rs  server.rs  session.rs  test_utils.rs  util.rs
doseid/src/config/: defaults.rs  mod.rs  registry.rs
doseid/src/container/: mod.rs
doseid/src/crypto/: mod.rs  schema.rs
doseid/src/deployment/: app.rs  mod.rs
doseid/src/docker/: credentials.rs  event.rs  mod.rs
doseid/src/git/: github.rs  mod.rs
doseid/src/proxy/: mod.rs
doseid/src/server/: app.rs  build.rs  cluster.rs  cron.rs  health.rs  info.rs  logs.rs  mod.rs  ping.rs  project.rs  secret.rs
doseid/src/server/certificate/: mod.rs  route.rs  schema.rs
doseid/src/server/cron/: mod.rs  route.rs  schema.rs
doseid/src/server/deployment/: route.rs  (+1 more)
doseid/src/util/: mod.rs  network.rs
doseiserver/: Cargo.toml
doseiserver/src/: main.rs
proto/: Cargo.toml  build.rs
proto/schema/: cluster.proto  cron_job.proto
proto/src/: cluster.proto  cluster_node.proto  lib.rs
proxy/: Cargo.toml  README.md
proxy/.sqlx/: query-e208b67e200b53ddc75cf6c14adc275bab1e6245c8d2a540fef8359a4abf42e4.json
proxy/src/: config.rs  main.rs  ssl.rs
proxy/src/config/: default.rs  mod.rs
proxy/src/server/: domain.rs  mod.rs  ping.rs
server/: Cargo.toml
server/src/: main.rs
util/: Cargo.toml  README.md  pyproject.toml
util/framework/: Cargo.toml  pyproject.toml
util/framework/src/: lib.rs
util/src/: git.rs  lib.rs  network.rs  package_manager.rs  secret.rs
(+64 files in other folders)
