[workspace]
members = ["proto", "server", "client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/Alw3ys/dosei"
authors = ["Alvaro Molina <am@dosei.ai>"]
edition = "2021"

[workspace.dependencies]
dosei_proto = { path = "./proto" }

tokio = { version = "1.34.0", features = ["full"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
prost = { version = "0.12.3" }
prost-build = { version = "0.12.3" }
bytes = { version = "1.5.0" }
