[workspace]
members = ["proto", "doseid", "proxy", "util"]
resolver = "2"

[workspace.package]
version = "0.0.2"
license = "Apache-2.0"
repository = "https://github.com/doseiai/engine"
authors = [
    "Alvaro Molina <am@dosei.ai>",
    "Rahul Lakhanpal <rahulkp220@gmail.com>",
]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
prost = { version = "0.12.3" }
prost-build = { version = "0.12.3" }
dotenv = { version = "0.15.0" }
toml = { version = "0.8.8" }
regex = { version = "1.10.2" }
