[package]
name = "cli"
description = "Dosei Command Line Interface (CLI)"
version = { workspace = true }
edition = { workspace = true }


[dependencies]
clap = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

anyhow = "1.0.75"
once_cell = "1.19.0"
home = "0.5.9"
