[package]
name = "dctl"
description = "Dosei Command Line Interface (CLI)"
version = { workspace = true }
edition = { workspace = true }


[dependencies]
clap = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

anyhow = "1.0.75"
once_cell = "1.19.0"
home = "0.5.9"
flate2 = "1.0.28"
tar = "0.4.40"
reqwest = { version = "0.11.23", features = ["blocking", "json", "multipart"] }
sysinfo = { version = "0.30.5" }
webbrowser = { version = "0.8.12" }
tiny_http = { version = "0.12.0" }
ignore = { version = "0.4.22" }
