[package]
name = "dosei"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "dosei"
path = "src/main.rs"

[dependencies]
dosei_proto = { workspace = true }

clap = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
prost = { workspace = true }
dotenv = { workspace = true }

axum = "0.6.20"
env_logger = "0.10.1"
log = "0.4.20"
cron = "0.12.0"
chrono = { version = "0.4.31", features = ["serde"] }
bollard = "0.15.0"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres", "uuid", "chrono" ] }
anyhow = "1.0.75"
once_cell = "1.19.0"
