[package]
name = "doseid"
description = "Dosei Daemon"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
dosei_util = { path = "../util" }
dosei_proto = { path = "../proto" }

clap = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7.10"
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
prost = { workspace = true }
dotenv = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

axum = "0.7.2"
cron = "0.12.0"
chrono = { version = "0.4.31", features = ["serde"] }
bollard = "0.15.0"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "tls-native-tls",
] }
anyhow = "1.0.75"
once_cell = "1.19.0"
futures-util = "0.3.29"
gcp_auth = "0.10.0"
hex = "0.4.3"
reqwest = { version = "0.11.23", features = ["json"] }
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tracing = "0.1.40"
home = "0.5.9"
jsonwebtoken = "9.2.0"
tempfile = "3.9.0"
git2 = "0.18.1"
flate2 = "1.0.28"
tar = "0.4.40"

[dev-dependencies]
futures = "0.3.30"
