[package]
name = "doseid"
description = "Dosei Daemon"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dosei_util = { path = "../util" }

clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.82"
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
bollard = "0.16.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
rand = "0.8.5"
serde_json = "1.0.115"
reqwest = { version = "0.12.3", features = ["json"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-native-tls"] }
axum = { version = "0.7.5", features = ["multipart"] }
tower-http = { version = "0.5.2",features = ["cors", "trace"] }
bcrypt = "0.15.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.0"
tempfile = "3.10.1"
futures-util = "0.3.30"
ring = "0.17.8"
base64 = "0.22.0"
