[package]
name = "proxy"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
anyhow = "1.0.82"
cached = "0.49.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "tls-native-tls",
] }
